# rgbrain-ia-ml

./: .gitignore  README.md  app.py  pyproject.toml  temp.txt
.streamlit/: secrets.toml.exemplos
responda_me/: inicial.py
responda_me/pages/: 01_chat.py  02_audio.py  03_analise_sentimento.py  04_extrair_informacoes_pdf.py
responda_me/utils/: chatbot.py
rgbrain_ia_ml/: streamlit_app.py
rgbrain_ia_ml/pages/: 02_audio.py  03_analise_sentimento.py  04_extrair_informacoes_pdf.py  configuracoes_pagina.yaml  laboratorio_chatboot.py  laboratorio_ocr.py
rgbrain_ia_ml/pages/laboratorio_ocr/: experimentos_chatboot_pages.py  experimentos_ocr_pages.py
rgbrain_ia_ml/servicos/: configuracoes_servicos.yaml  experimentos_ocr_servico.py
rgbrain_ia_ml/utils/: chatbot.py  configuracoes_paginas.py  menus.py  misc.py  secrets.py
utils/: chatbot.py  text.py
