[tool.poetry]
name = "responda-me"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gonçalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"
langchain = "^0.1.13"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
openai = "^1.14.2"
tiktoken = "^0.6.0"
streamlit-chat = "^0.1.1"
torch = "^2.2.1"
sentence-transformers = "2.2.2"
instructorembedding = "^1.0.1"
langchain-community = "^0.0.29"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
ffmpeg-python = "^0.2.0"
audio-recorder-streamlit = "^0.0.8"
gpt4all = "^2.3.2"
speechrecognition = "^3.10.1"
transformers = "^4.39.1"
accelerate = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
