[tool.poetry]
name = "rgbrain-ia-ml"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gonçalves <ro.go.calves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"

# STREAMLIT
streamlit = "^1.32.2"
audio-recorder-streamlit = "^0.0.8"
streamlit-chat = "^0.1.1"
streamlit-option-menu = "^0.3.12"

# LANGCHAIN
langchain = "^0.1.13"
langchain-community = "^0.0.29"
instructorembedding = "^1.0.1"
transformers = "^4.39.1"

# OCR
pytesseract = "^0.3.10"
easyocr = "^1.7.1"
keras-ocr = "^0.9.3"

# OPENAI
openai = "^1.14.2"
tiktoken = "^0.6.0"
openai-whisper = {git = "https://github.com/openai/whisper.git"}

pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
torch = "^2.2.1"
sentence-transformers = "2.2.2"
ffmpeg-python = "^0.2.0"
speechrecognition = "^3.10.1"
accelerate = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
